@@ -133,7 +133,7 @@
 .\" ========================================================================
 .\"
 .IX Title "LIBEV 3"
-.TH LIBEV 3 "2019-06-25" "libev-4.25" "libev - high performance full featured event loop"
+.TH LIBEV 3 "2019-07-07" "libev-4.27" "libev - high performance full featured event loop"
 .\" For nroff, turn off justification.  Always turn off hyphenation; it makes
 .\" way too many mistakes in technical documents.
 .if n .ad l
@@ -1873,7 +1873,7 @@ reuse the same code path.
 \fIThe special problem of fork\fR
 .IX Subsection "The special problem of fork"
 .PP
-Some backends (epoll, kqueue, probably linuxaio) do not support \f(CW\*(C`fork ()\*(C'\fR
+Some backends (epoll, kqueue, linuxaio, iouring) do not support \f(CW\*(C`fork ()\*(C'\fR
 at all or exhibit useless behaviour. Libev fully supports fork, but needs
 to be told about it in the child if you want to continue to use it in the
 child.
@@ -4626,6 +4626,7 @@ in your include path (e.g. in libev/ when using \-Ilibev):
 \&   ev_poll.c       only when poll backend is enabled
 \&   ev_epoll.c      only when the epoll backend is enabled
 \&   ev_linuxaio.c   only when the linux aio backend is enabled
+\&   ev_iouring.c    only when the linux io_uring backend is enabled
 \&   ev_kqueue.c     only when the kqueue backend is enabled
 \&   ev_port.c       only when the solaris port backend is enabled
 .Ve
@@ -4818,10 +4819,15 @@ backend for GNU/Linux systems. If undefined, it will be enabled if the
 headers indicate GNU/Linux + Glibc 2.4 or newer, otherwise disabled.
 .IP "\s-1EV_USE_LINUXAIO\s0" 4
 .IX Item "EV_USE_LINUXAIO"
+If defined to be \f(CW1\fR, libev will compile in support for the Linux aio
+backend (\f(CW\*(C`EV_USE_EPOLL\*(C'\fR must also be enabled). If undefined, it will be
+enabled on linux, otherwise disabled.
+.IP "\s-1EV_USE_IOURING\s0" 4
+.IX Item "EV_USE_IOURING"
 If defined to be \f(CW1\fR, libev will compile in support for the Linux
-aio backend. Due to it's currenbt limitations it has to be requested
-explicitly.  If undefined, it will be enabled on linux, otherwise
-disabled.
+io_uring backend (\f(CW\*(C`EV_USE_EPOLL\*(C'\fR must also be enabled). Due to it's
+current limitations it has to be requested explicitly. If undefined, it
+will be enabled on linux, otherwise disabled.
 .IP "\s-1EV_USE_KQUEUE\s0" 4
 .IX Item "EV_USE_KQUEUE"
 If defined to be \f(CW1\fR, libev will compile in support for the \s-1BSD\s0 style
